// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TopNavigation /> should render correctly 1`] = `
<nav
  className="navbar navbar-expand-sm navbar-dark fixed-top"
>
  <div
    className="container"
  >
    <Link
      className="navbar-brand"
      replace={false}
      to="/"
    >
      <strong>
        Ievents
      </strong>
    </Link>
    <button
      className="navbar-toggler"
      data-target="#navMenu"
      data-toggle="collapse"
    >
      <span
        className="navbar-toggler-icon"
      />
    </button>
    <div
      className="collapse navbar-collapse"
      id="navMenu"
    >
      <ul
        className="navbar-nav ml-auto"
      >
        <li
          className="nav-item"
        >
          <Link
            className="nav-link"
            replace={false}
            to="/"
          >
            Home
          </Link>
        </li>
        <li
          className="nav-item"
        >
          <Link
            className="nav-link"
            replace={false}
            to="/centers1"
          >
            Centers
          </Link>
        </li>
        <li
          className="nav-item"
        >
          <Link
            className="nav-link"
            replace={false}
            to="/users/login"
          >
             Signin 
          </Link>
        </li>
        <li
          className="nav-item"
        >
          <Link
            className="nav-link"
            replace={false}
            to="/users"
          >
             Signup 
          </Link>
        </li>
      </ul>
    </div>
  </div>
</nav>
`;

exports[`<UserTopNav /> should render correctly for admin user 1`] = `
<nav
  className="navbar navbar-expand-md navbar-dark fixed-top d-block d-lg-none"
>
  <div
    className="container"
  >
    <a
      className="navbar-brand"
      href=""
    >
      <strong
        className="text-capitalize"
      >
        test-name
      </strong>
      <br />
      <p
        className="h6"
      />
    </a>
    <button
      className="navbar-toggler"
      data-target="#navMenu"
      data-toggle="collapse"
    >
      <span
        className="navbar-toggler-icon"
      />
    </button>
    <div
      className="collapse navbar-collapse"
      id="navMenu"
    >
      <ul
        className="navbar-nav ml-auto"
      >
        <li
          className="nav-item"
        >
          <Link
            className="nav-link"
            replace={false}
            to="/events"
          >
            My events
          </Link>
        </li>
        <li
          className="nav-item"
        >
          <Link
            className="nav-link"
            replace={false}
            to="/addEvent"
          >
            Add Events
          </Link>
        </li>
        <li
          className="nav-item"
        >
          <Link
            className="nav-link"
            replace={false}
            to="/centers2"
          >
            Centers
          </Link>
        </li>
        <AdminOptions
          isAdmin={true}
          isSuperAdmin={false}
        />
        <li
          className="nav-item"
        >
          <Link
            className="nav-link"
            onClick={[Function]}
            replace={false}
            to="/"
          >
            Logout
          </Link>
        </li>
      </ul>
    </div>
  </div>
</nav>
`;

exports[`<UserTopNav /> should render correctly for normal user 1`] = `
<nav
  className="navbar navbar-expand-md navbar-dark fixed-top d-block d-lg-none"
>
  <div
    className="container"
  >
    <a
      className="navbar-brand"
      href=""
    >
      <strong
        className="text-capitalize"
      >
        test-name
      </strong>
      <br />
      <p
        className="h6"
      />
    </a>
    <button
      className="navbar-toggler"
      data-target="#navMenu"
      data-toggle="collapse"
    >
      <span
        className="navbar-toggler-icon"
      />
    </button>
    <div
      className="collapse navbar-collapse"
      id="navMenu"
    >
      <ul
        className="navbar-nav ml-auto"
      >
        <li
          className="nav-item"
        >
          <Link
            className="nav-link"
            replace={false}
            to="/events"
          >
            My events
          </Link>
        </li>
        <li
          className="nav-item"
        >
          <Link
            className="nav-link"
            replace={false}
            to="/addEvent"
          >
            Add Events
          </Link>
        </li>
        <li
          className="nav-item"
        >
          <Link
            className="nav-link"
            replace={false}
            to="/centers2"
          >
            Centers
          </Link>
        </li>
        <AdminOptions
          isAdmin={false}
          isSuperAdmin={false}
        />
        <li
          className="nav-item"
        >
          <Link
            className="nav-link"
            onClick={[Function]}
            replace={false}
            to="/"
          >
            Logout
          </Link>
        </li>
      </ul>
    </div>
  </div>
</nav>
`;

exports[`<UserTopNav /> should render correctly for super admin user 1`] = `
<nav
  className="navbar navbar-expand-md navbar-dark fixed-top d-block d-lg-none"
>
  <div
    className="container"
  >
    <a
      className="navbar-brand"
      href=""
    >
      <strong
        className="text-capitalize"
      >
        test-name
      </strong>
      <br />
      <p
        className="h6"
      />
    </a>
    <button
      className="navbar-toggler"
      data-target="#navMenu"
      data-toggle="collapse"
    >
      <span
        className="navbar-toggler-icon"
      />
    </button>
    <div
      className="collapse navbar-collapse"
      id="navMenu"
    >
      <ul
        className="navbar-nav ml-auto"
      >
        <li
          className="nav-item"
        >
          <Link
            className="nav-link"
            replace={false}
            to="/events"
          >
            My events
          </Link>
        </li>
        <li
          className="nav-item"
        >
          <Link
            className="nav-link"
            replace={false}
            to="/addEvent"
          >
            Add Events
          </Link>
        </li>
        <li
          className="nav-item"
        >
          <Link
            className="nav-link"
            replace={false}
            to="/centers2"
          >
            Centers
          </Link>
        </li>
        <AdminOptions
          isAdmin={false}
          isSuperAdmin={true}
        />
        <li
          className="nav-item"
        >
          <Link
            className="nav-link"
            onClick={[Function]}
            replace={false}
            to="/"
          >
            Logout
          </Link>
        </li>
      </ul>
    </div>
  </div>
</nav>
`;
